--- a/index.html
+++ b/index.html
@@ -600,9 +600,56 @@
                 </div>
             </section>
 
-            <!--==================== PORTFOLIO ====================-->
+            <!--==================== PROJECTS ====================-->
             <section class="portfolio section" id="portfolio">
+                <h2 class="section__title">Projects</h2>
+                <span class="section__subtitle">Most recent work</span>
                 
+                <div class="portfolio__container container">
+                    <div>
+                        <!--==================== PROJECTS 1 ====================-->
+                        <div class="portfolio__content grid">
+                            <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">E-commerce Website</h3>
+                                <p class="portfolio__description">Full ecommerce website compatible with all devices fully responsive</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PROJECTS 2 ====================-->
+                        <div class="portfolio__content grid">
+                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Grocery Shop</h3>
+                                <p class="portfolio__description">Full ecommerce website compatible with all devices fully responsive</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PROJECTS 3 ====================-->
+                        <div class="portfolio__content grid">
+                            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Tour and Travel Website</h3>
+                                <p class="portfolio__description">Full ecommerce website compatible with all devices fully responsive</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== PROJECT IN MIND ====================-->
