--- a/index.html
+++ b/index.html
@@ -977,11 +977,11 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="" target="_blank" class="footer__social">
+                        <a href="https://www.instagram.com/_.gich.buoy/" target="_blank" class="footer__social">
                             <i class="uil uil-instagram"></i>
                         </a>
 
-                        <a href="" target="_blank" class="footer__social">
+                        <a href="https://twitter.com/Gichbuoy1" target="_blank" class="footer__social">
                             <i class="uil uil-twitter-alt"></i>
                         </a>
 
