--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/resumeCV.docx" class="button button--flex">
+                            <a download="" href="assets/pdf/Alex_Maina_CV.pdf" target="_blank" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
